--- a/app/globals.css
+++ b/app/globals.css
@@ -126,3 +126,25 @@
   text-stroke: 2px black; /* Standard property */
   font-size: 3rem;
 }
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.animate-marquee {
+  display: inline-block;
+  white-space: nowrap;
+  animation: marquee 30s linear infinite;
+}
+
+.marquee-container {
+  position: relative;
+}
+
+.marquee-container:hover .animate-marquee {
+  animation-play-state: paused;
+}
